Added EntryMood enum. Updated controller and EntryDetailViewController to use it.

--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -148,6 +148,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="segMood" destination="gcE-6f-hWG" id="6RK-RN-BvD"/>
                         <outlet property="txtTitle" destination="EGq-Nm-hp0" id="HXk-Ce-qPh"/>
                         <outlet property="txtvBody" destination="Dtu-Li-DiX" id="dke-Hm-8pv"/>
                     </connections>
