Updates create() and update() to include mood option

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -137,6 +137,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodytextTextView" destination="L9u-ya-NPU" id="Kyx-iE-F2P"/>
+                        <outlet property="moodControl" destination="xFT-IB-0r9" id="boe-8k-Jgk"/>
                         <outlet property="titleTextField" destination="tth-dB-CVc" id="hOZ-JO-EPe"/>
                     </connections>
                 </viewController>
